--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-  <h1>PDF.js Multi-Page Viewer</h1>
+  <h1>Health Center Counseling Services</h1>
   <div id="pdf-container"></div>
 
   <!-- PDF.js library from CDN -->
